[REFACTOR] #103: 담당 API 서비스 검증 책임 분리