@@ -21,7 +21,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,14 +30,14 @@ public class EvaluationService {
     private final ProjectRepository projectRepository;
     private final ProjectMemberRepository projectMemberRepository;
     private final PeerEvaluationRepository peerEvaluationRepository;
+    private final EvaluationParticipantResolver participantResolver;
 
     public EvaluationTargetResponse getEvaluationTargets(Long projectId, Long userId) {
 
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
 
-        ProjectMember currentMember = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
+        ProjectMember currentMember = participantResolver.requireEvaluator(projectId, userId);
 
         List<ProjectMember> allMembers = projectMemberRepository.findAllWithUserByProjectId(projectId);
 
@@ -55,22 +54,15 @@ public class EvaluationService {
                             .isEvaluated(isEvaluated)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new EvaluationTargetResponse(targets);
     }
 
     public PeerEvaluationDetailResponse getPeerEvaluationDetail(Long projectId, Long targetMemberId, Long userId) {
 
-        ProjectMember evaluator = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
-
-        ProjectMember evaluatee = projectMemberRepository.findById(targetMemberId)
-                .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
-
-        if (!evaluatee.getProject().getId().equals(projectId)) {
-            throw new ApiException(ErrorCode.FORBIDDEN);
-        }
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
 
         PeerEvaluation evaluation = peerEvaluationRepository.findByEvaluatorIdAndEvaluateeId(evaluator.getId(), targetMemberId)
                 .orElseThrow(() -> new ApiException(EvaluationErrorCode.EVALUATION_NOT_FOUND));
@@ -85,15 +77,8 @@ public class EvaluationService {
             Long userId,
             PeerEvaluationCreateRequest request) {
 
-        ProjectMember evaluator = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
-
-        ProjectMember evaluatee = projectMemberRepository.findById(targetMemberId)
-                .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
-
-        if (!evaluatee.getProject().getId().equals(projectId)) {
-            throw new ApiException(ErrorCode.FORBIDDEN);
-        }
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
 
         if (!evaluatee.getProject().isEvaluatingState(TimeUtil.todayUtc())) {
             throw new ApiException(EvaluationErrorCode.NOT_EVALUATING_STATE);
@@ -106,8 +91,6 @@ public class EvaluationService {
         if (peerEvaluationRepository.findByEvaluatorIdAndEvaluateeId(evaluator.getId(), evaluatee.getId()).isPresent()) {
             throw new ApiException(EvaluationErrorCode.ALREADY_EVALUATED);
         }
-
-        boolean isNudgeTriggered = checkNudgeCondition(request);
 
         PeerEvaluation evaluation = PeerEvaluation.builder()
                 .evaluator(evaluator)
@@ -123,7 +106,7 @@ public class EvaluationService {
 
         peerEvaluationRepository.save(evaluation);
 
-        return new PeerEvaluationCreateResponse(evaluation.getId(), isNudgeTriggered);
+        return new PeerEvaluationCreateResponse(evaluation.getId(), hasUniformScores(request));
     }
 
     @Transactional
@@ -133,15 +116,8 @@ public class EvaluationService {
             Long userId,
             PeerEvaluationCreateRequest request
     ) {
-        ProjectMember evaluator = projectMemberRepository.findByProjectIdAndUserId(projectId, userId)
-                .orElseThrow(() -> new ApiException(ErrorCode.FORBIDDEN));
-
-        ProjectMember evaluatee = projectMemberRepository.findById(targetMemberId)
-                .orElseThrow(() -> new ApiException(ErrorCode.NOT_FOUND));
-
-        if (!evaluatee.getProject().getId().equals(projectId)) {
-            throw new ApiException(ErrorCode.FORBIDDEN);
-        }
+        ProjectMember evaluator = participantResolver.requireEvaluator(projectId, userId);
+        ProjectMember evaluatee = participantResolver.requireEvaluatee(projectId, targetMemberId);
 
         if (evaluatee.getProject().isCompleted()) {
             throw new ApiException(EvaluationErrorCode.CANNOT_MODIFY_EVALUATION_AFTER_PUBLISH);
@@ -161,10 +137,10 @@ public class EvaluationService {
                 request.feedback()
         );
 
-        return new PeerEvaluationCreateResponse(evaluation.getId(), checkNudgeCondition(request));
+        return new PeerEvaluationCreateResponse(evaluation.getId(), hasUniformScores(request));
     }
 
-    private boolean checkNudgeCondition(PeerEvaluationCreateRequest request) {
+    private boolean hasUniformScores(PeerEvaluationCreateRequest request) {
         int firstScore = request.collaborationScore();
         return firstScore == request.initiativeScore() &&
                 firstScore == request.responsibilityScore() &&
